# CAPE

CAPE/: CMakeLists.txt  pipe_seg.cpp  run_cape_offline.cpp
CAPE/include/: CAPE.h
CAPE/src/: CAPE.cpp
Data/pipe_w/: calib_params.xml
Data/pipe_xi_n/: depth.py
Data/seq_example/: show_depth.py
